# MediaPlayerWrapper

./: CMakeLists.txt  readme.md
AICommon/: CMakeLists.txt
AICommon/Utils/include/Utils/Attachment/: InProcessAttachment.h
AICommon/Utils/src/: DeviceInfo.cpp
Application/: CMakeLists.txt
Application/MicrophoneTEST/: MicroPhoneTest.cpp
Application/include/Application/: AIClient.h  ControlActionManager.h  SampleApp.h  UIManager.h  mq_internal.h
Application/src/: AIClient.cpp  CMakeLists.txt  ControlActionManager.cpp  SampleApp.cpp  UIManager.cpp
MediaPlayer/AudioMediaPlayer/include/AudioMediaPlayer/: AOWrapper.h  FFmpegAttachmentInputController.h
MediaPlayer/AudioMediaPlayer/src/: FFmpegAttachmentInputController.cpp  FFmpegUrlInputController.cpp
MediaPlayer/AudioMediaPlayer/test/: AOWrapperMockTest.cpp  AOWrapperTest.cpp  CMakeLists.txt
ThirdLibrary/Open3rd/include/: properties.h
